--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-
+ 
   <div class="question-container container">
 
     <!-- FIXED: href → src -->
@@ -50,11 +50,12 @@
 
 
     <h2 style="color: aliceblue;">Ni enna Avolo Busy ah Olunga Pesamudiyatha?</h2>
-    <div class="center-btn-wrapper">
-  <a href="heart.html">
-    <button class="yes-btn btn">Peasuren</button>
+   <div class="center-btn-wrapper">
+  <a href="heart.html" class="center-link">
+    Peasuren
   </a>
 </div>
+
 
 
 
@@ -71,7 +72,8 @@
     <div class="cssload-shadow"></div>
   </div>
 
-<canvas id="particle-canvas"></canvas>
+<canvas id="bg-canvas"></canvas>
+
 
   <script src="script.js"></script>
 
